--- a/run-agent.yml
+++ b/run-agent.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run agent
         env:
-          OPEN_API_KEY: ${{ secrets.OPEN_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPEN_API_KEY }}
           TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
         run: |
           python Module1.py
