--- a/run-agent.yml
+++ b/run-agent.yml
@@ -2,15 +2,12 @@ name: Run LangChain Agent
 
 on:
   push:
-    branches:
-    - main
-    - feature-code-dev
+    branches: [main, feature-code-dev]
   workflow_dispatch:
 
 jobs:
   run:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -18,15 +15,17 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.11" # Python 3.10+ is required for LangGraph
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          python -m pip install --upgrade pip
+          pip install --no-cache-dir -r requirements.txt
 
       - name: Run agent
         env:
+          # This must be OPENAI_API_KEY for the library to detect it automatically
           OPENAI_API_KEY: ${{ secrets.OPEN_API_KEY }}
           TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
-        run: |
-          python Module1.py
+        run: python Module1.py
