--- a/run-agent.yml
+++ b/run-agent.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Run agent
         env:
           # This must be OPENAI_API_KEY for the library to detect it automatically
-          OPENAI_API_KEY: ${{ secrets.OPEN_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
         run: python Module1.py
