--- a/run-agent.yml
+++ b/run-agent.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11" # Python 3.10+ is required for LangGraph
+          python-version: "3.11"
           cache: 'pip'
 
       - name: Install dependencies
@@ -23,9 +23,17 @@ jobs:
           python -m pip install --upgrade pip
           pip install --no-cache-dir -r requirements.txt
 
+      - name: Verify Environment (Debug)
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
+        run: |
+          echo "Checking environment variables..."
+          if [ -z "$OPENAI_API_KEY" ]; then echo "OPENAI_API_KEY is EMPTY"; else echo "OPENAI_API_KEY length is ${#OPENAI_API_KEY}"; fi
+          if [ -z "$TAVILY_API_KEY" ]; then echo "TAVILY_API_KEY is EMPTY"; else echo "TAVILY_API_KEY length is ${#TAVILY_API_KEY}"; fi
+
       - name: Run agent
         env:
-          # This must be OPENAI_API_KEY for the library to detect it automatically
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
         run: python Module1.py
