--- a/run-agent.yml
+++ b/run-agent.yml
@@ -23,20 +23,17 @@ jobs:
           python -m pip install --upgrade pip
           pip install --no-cache-dir -r requirements.txt
 
-      - name: Verify Environment (Debug)
+      - name: Verify Environment Variables
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
         run: |
-          echo "Checking environment variables..."
-          if [ -z "$OPENAI_API_KEY" ]; then echo "OPENAI_API_KEY is EMPTY"; else echo "OPENAI_API_KEY length is ${#OPENAI_API_KEY}"; fi
-          if [ -z "$TAVILY_API_KEY" ]; then echo "TAVILY_API_KEY is EMPTY"; else echo "TAVILY_API_KEY length is ${#TAVILY_API_KEY}"; fi
+          echo "Verifying secret injection..."
+          if [ -z "$OPENAI_API_KEY" ]; then echo "OPENAI_API_KEY is EMPTY"; else echo "OPENAI_API_KEY length: ${#OPENAI_API_KEY}"; fi
+          if [ -z "$TAVILY_API_KEY" ]; then echo "TAVILY_API_KEY is EMPTY"; else echo "TAVILY_API_KEY length: ${#TAVILY_API_KEY}"; fi
 
-      - name: Run A
+      - name: Run agent
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
         run: python Module1.py
-
-
-
