--- a/run-agent.yml
+++ b/run-agent.yml
@@ -2,12 +2,20 @@ name: Run LangChain Agent
 
 on:
   push:
-    branches: [main, feature-code-dev]
+    branches:
+      - main
+      - feature-code-dev
   workflow_dispatch:
 
 jobs:
   run:
     runs-on: ubuntu-latest
+
+    # 🔐 Secrets injected ONCE at job level
+    env:
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -16,24 +24,18 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-          cache: 'pip'
+          cache: pip
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install --no-cache-dir -r requirements.txt
 
-      - name: Verify Environment Variables
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
+      # ✅ Safe verification (does NOT print key)
+      - name: Verify OpenAI key is available
         run: |
-          echo "Verifying secret injection..."
-          if [ -z "$OPENAI_API_KEY" ]; then echo "OPENAI_API_KEY is EMPTY"; else echo "OPENAI_API_KEY length: ${#OPENAI_API_KEY}"; fi
-          if [ -z "$TAVILY_API_KEY" ]; then echo "TAVILY_API_KEY is EMPTY"; else echo "TAVILY_API_KEY length: ${#TAVILY_API_KEY}"; fi
+          echo "OPENAI_API_KEY length: ${#OPENAI_API_KEY}"
+          echo "TAVILY_API_KEY length: ${#TAVILY_API_KEY}"
 
-      - name: Run agent
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
+      - name: Run LangChain Agent
         run: python Module1.py
