--- a/run-agent.yml
+++ b/run-agent.yml
@@ -1,41 +1,42 @@
-name: Run LangChain Agent
+name: Run LLM Agent
 
 on:
   push:
     branches:
       - main
       - feature-code-dev
-  workflow_dispatch:
 
 jobs:
-  run:
+  run-agent:
     runs-on: ubuntu-latest
 
-    # 🔐 Secrets injected ONCE at job level
-    env:
-      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-      TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      # 1️⃣ Checkout the repo
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
+      # 2️⃣ Set up Python
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
-          cache: pip
+          python-version: '3.12'
 
+      # 3️⃣ Install dependencies
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install --no-cache-dir -r requirements.txt
+        run: pip install -r requirements.txt
 
-      # ✅ Safe verification (does NOT print key)
-      - name: Verify OpenAI key is available
+      # 4️⃣ Optional: verify secrets are available
+      - name: Verify secrets
         run: |
-          echo "OPENAI_API_KEY length: ${#OPENAI_API_KEY}"
-          echo "TAVILY_API_KEY length: ${#TAVILY_API_KEY}"
+          echo "OPENAI_API_KEY is set: ${OPENAI_API_KEY:+Yes}"
+          echo "TAVILY_API_KEY is set: ${TAVILY_API_KEY:+Yes}"
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
 
-      - name: Run LangChain Agent
+      # 5️⃣ Run the Python script with secrets
+      - name: Run Python Agent
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
         run: python Module1.py
