--- a/run-agent.yml
+++ b/run-agent.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout the repo
-      - name: Checkout repository
+      # 1️⃣ Checkout the repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
       # 2️⃣ Set up Python
@@ -25,23 +25,16 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      # 4️⃣ Inject secrets as env variables
-      - name: Set API keys
-        run: echo "Secrets injected"
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
-
-      # 5️⃣ Debug: verify secrets are available (optional)
-      - name: Verify secrets
+      # 4️⃣ Optional: Debug that secrets are available
+      - name: Debug secrets
         run: |
-          echo "OPENAI_API_KEY is set: ${OPENAI_API_KEY:+Yes}"
-          echo "TAVILY_API_KEY is set: ${TAVILY_API_KEY:+Yes}"
+          echo "OPENAI_API_KEY set: ${OPENAI_API_KEY:+Yes}"
+          echo "TAVILY_API_KEY set: ${TAVILY_API_KEY:+Yes}"
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
 
-      # 6️⃣ Run your Python script with secrets
+      # 5️⃣ Run Python script with secrets
       - name: Run Python Agent
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
